--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import { Image } from 'astro:assets';
 
 const { frontmatter } = Astro.props;
 ---
@@ -7,6 +8,6 @@ const { frontmatter } = Astro.props;
     <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
-    <img src={frontmatter.image} width="300" />
+    <Image src={frontmatter.image} alt="Image" />
     <slot />
 </BaseLayout>
