--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,6 +8,6 @@ const { frontmatter } = Astro.props;
     <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
-    <Image src={frontmatter.image} alt="Image" />
+    <Image src={frontmatter.image} alt="Image" inferSize={true} />
     <slot />
 </BaseLayout>
