--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,6 +1,5 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-import { Image } from 'astro:assets';
 
 const { frontmatter } = Astro.props;
 ---
@@ -8,6 +7,6 @@ const { frontmatter } = Astro.props;
     <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
-    <Image src={frontmatter.image} alt="Image" inferSize={true} />
+    <img src={frontmatter.image} alt="Image" />
     <slot />
 </BaseLayout>
