testing if an img in an html page will work

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,5 @@ const pageTitle = "Recipes from my Grandma";
 ---
 <BaseLayout pageTitle={pageTitle}>
 	<h2>My awesome blog subtitle</h2>
+	<img src="src/images/Jerm.png" alt="a pic of jerm" />
 </BaseLayout>
