--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ const pageTitle = "Recipes from my Grandma";
 ---
 <BaseLayout pageTitle={pageTitle}>
 	<h2>My awesome blog subtitle</h2>
-	<img src="src/images/Jerm.png" alt="a pic of jerm" />
+	<img src="public/Jerm.png" alt="a pic of jerm" />
 </BaseLayout>
