--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -7,6 +7,6 @@ const { frontmatter } = Astro.props;
     <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
-    <img src={frontmatter.image} alt="Image" />
+    <img src={frontmatter.image.slice(6, -1)} alt="Image" />
     <slot />
 </BaseLayout>
